feate: git commit template 적용, front 디렉토리 구조 변경

--- a/front/src/SCSS/MainPage/List.scss
+++ b/front/src/SCSS/MainPage/List.scss
@@ -1,10 +1,10 @@
-@import "./Base.scss";
+@import "../Base.scss";
 
 .cardlist {
   display: flex;
   position: relative;
   justify-content: flex-start;
-//   background-color: pink;
+  //   background-color: pink;
   border-radius: $round;
   padding-right: 2rem;
   &:hover {
@@ -20,7 +20,7 @@
     &::-webkit-scrollbar {
       display: none;
     }
-	// position: relative;
+    // position: relative;
     .cards-row {
       display: flex;
     }
