feat: init profilePage, add route, fix warnings

--- a/front/src/SCSS/Base.scss
+++ b/front/src/SCSS/Base.scss
@@ -20,6 +20,10 @@ $shadowDeep: 0rem 0.3rem 0.3rem 0rem rgba(0, 0, 0, 0.25);
 $shadow: 0rem 0.3rem 0.3rem 0rem rgba(0, 0, 0, 0.1);
 
 $round: 1rem; //border-radius 통일
+
+//페이지 상단 연두색 box 사이즈 (프로필 배너 등)
+
+
 body {
   font-family: "Nunito Sans", sans-serif;
   margin: 0.5rem 1rem;
