--- a/front/src/SCSS/MainPage/Dashboard.scss
+++ b/front/src/SCSS/MainPage/Dashboard.scss
@@ -18,6 +18,10 @@
     url(https://cdn.pixabay.com/photo/2018/04/04/14/34/design-3289964_960_720.png);
   // box-shadow:inset 0 0 0 2000px rgba(167, 188 ,91, 0.95);
   box-shadow: 0rem 0.5rem 0.5rem 0rem rgba(0, 0, 0, 0.1);
+  .dashboard__wrap {
+    max-width: 1440px;
+    margin: 0 auto;
+  }
 }
 
 .row1 {
