--- a/front/src/SCSS/MainPage/List.scss
+++ b/front/src/SCSS/MainPage/List.scss
@@ -3,6 +3,7 @@
 .cardlist {
   display: flex;
   position: relative;
+  left: 1rem;
   justify-content: flex-start;
   //   background-color: pink;
   border-radius: $round;
