fix: #8 fix mainPage error

--- a/front/src/SCSS/MainPage/Cards.scss
+++ b/front/src/SCSS/MainPage/Cards.scss
@@ -1,8 +1,9 @@
 @import "../Base.scss";
 
 .cards {
-  margin-right: 2rem;
+  margin-right: 1.7rem;
   background-color: white;
+  // background-color: pink;
   box-shadow: $shadow;
   border-radius: $round;
   padding: 1rem;
