--- a/front/src/SCSS/Base.scss
+++ b/front/src/SCSS/Base.scss
@@ -1,13 +1,15 @@
 // 모든 페이지 배경 색
 $bodyColor: #f9f9f9;
-//
+// 
 $mainColor: #a7bc5b;
 $black: #2c2c34;
 $darkGrey: #565656;
 $lightestGrey: #e5e5e5;
 $lightGrey: #c4c4c4;
 $pointRed: #ff6864;
+//font-weight
 $bold: 900;
+$normal: 700;
 //페이지 전체 margin 기준
 $fontXXl: 3rem; //36px
 $fontXl: 2.5rem; //30px
@@ -22,7 +24,6 @@ $shadow: 0rem 0.3rem 0.3rem 0rem rgba(0, 0, 0, 0.1);
 $round: 1rem; //border-radius 통일
 
 //페이지 상단 연두색 box 사이즈 (프로필 배너 등)
-
 
 body {
   font-family: "Nunito Sans", sans-serif;
