--- a/front/src/SCSS/MainPage/Cadet.scss
+++ b/front/src/SCSS/MainPage/Cadet.scss
@@ -2,7 +2,7 @@
 
 .cadet {
   box-sizing: border-box;
-  width: 50%;
+  width: 60%;
   .cadet__title {
     font-weight: $bold;
     font-size: $fontMl;
@@ -36,6 +36,7 @@
         &:hover {
           transform: scale(1.1);
           z-index: 1;
+          transition: transform 0.2s;
         }
         .cadet__name {
           margin-bottom: 0.5rem;
@@ -48,10 +49,11 @@
           font-weight: $bold;
         }
         .cadet__word {
-          border: 1px solid $lightGrey;
+          border: 1px solid $lightestGrey;
           box-shadow: $shadow;
           border-radius: $round;
           padding: 1rem;
+          text-align: center;
         }
       }
     }
