--- a/front/src/SCSS/Base.scss
+++ b/front/src/SCSS/Base.scss
@@ -23,7 +23,6 @@ $round: 1rem; //border-radius 통일
 
 //페이지 상단 연두색 box 사이즈 (프로필 배너 등)
 
-
 body {
   font-family: "Nunito Sans", sans-serif;
   margin: 0.5rem 1rem;
@@ -34,6 +33,13 @@ body {
 @media (max-width: 78rem) {
   html {
     font-size: 12px;
+  }
+}
+
+a {
+  text-decoration: none;
+  &:hover {
+    color: $mainColor;
   }
 }
 
