--- a/front/src/SCSS/Navbar.scss
+++ b/front/src/SCSS/Navbar.scss
@@ -123,8 +123,9 @@
   }
   .notiText__wrap {
     position: absolute;
-    border-bottom-left-radius: $round;
     background-color: white;
+    border-bottom-left-radius: 0.3rem;
+    box-shadow: $shadow;
     top: 3.05rem;
     right: -0.5rem;
     width: 20rem;
@@ -138,6 +139,7 @@
     .notiText__body {
       max-height: 19rem;
       overflow-y: scroll;
+
       .body__card {
         border-bottom: 1px solid $lightestGrey;
         padding: 0 0.5rem;
