--- a/front/src/SCSS/AllProjectPage/ProjectGrid.scss
+++ b/front/src/SCSS/AllProjectPage/ProjectGrid.scss
@@ -11,20 +11,20 @@
 
 //미디어쿼리로 크기에 따라 반응형으로 만들어주기
 
-// @media (max-width: 1000px) {
-// 	.project-grid{
-// 		grid-template-columns: repeat(3, 1fr);
-// 	}
-// }
+@media (max-width: 1000px) {
+  .project-grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
 
-// @media (max-width: 700px) {
-// 	.project-grid{
-// 		grid-template-columns: repeat(3, 1fr);
-// 	}
-// }
+@media (max-width: 700px) {
+  .project-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
 
 @media (max-width: $iphone5Width) {
   .project-grid {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(1, 1fr);
   }
 }
