--- a/front/src/SCSS/CadetPage/CardsList.scss
+++ b/front/src/SCSS/CadetPage/CardsList.scss
@@ -2,15 +2,13 @@
 
 .cadetCardsList {
   display: flex;
-  grid-template-columns: repeat(4, 1fr);
   justify-content: center;
   align-items: center;
-  // margin-bottom: 1.5rem;
 }
 
 @media (max-width: 700px) {
   .cadetCardsList {
-    display: flex;
     flex-wrap: wrap;
+    flex-shrink: 0;
   }
 }
