--- a/front/src/SCSS/Navbar.scss
+++ b/front/src/SCSS/Navbar.scss
@@ -162,7 +162,20 @@
     }
   }
 }
-
+.Nav__user,
+.login {
+  position: relative;
+  left: -2rem;
+  bottom: -0.2rem;
+  background-color: $mainColor;
+  border-radius: 0.8rem;
+  padding: 0.5rem 1.2rem;
+  border: none;
+  .login__link {
+    color: white;
+    font-size: $fontMs;
+  }
+}
 .Nav__user {
   display: flex;
   align-items: center;
