feat: #85 add mainPage css, favicon

--- a/front/src/SCSS/Navbar.scss
+++ b/front/src/SCSS/Navbar.scss
@@ -54,9 +54,13 @@
     bottom: -1.3rem;
     left: 2.5rem;
     font-size: $fontSm;
-    width: 20rem;
+    width: 18rem;
     border: none;
     background-color: $bodyColor;
+    &:focus {
+      outline: none;
+      border-bottom: 2px solid $mainColor;
+    }
   }
   ::placeholder {
     color: $lightestGrey;
@@ -168,9 +172,36 @@
   left: -2rem;
   bottom: -0.2rem;
   background-color: $mainColor;
-  border-radius: 0.8rem;
-  padding: 0.5rem 1.2rem;
+  border-radius: 0.7rem;
+  padding: 0.4rem 1.1rem;
   border: none;
+  font-weight: 700;
+  // transition: box-shadow 0.9s;
+
+  overflow: hidden;
+  &:after {
+    content: "";
+    height: 8rem;
+    left: -3rem;
+    opacity: 0.2;
+    position: absolute;
+    top: -3rem;
+    background: #fff;
+    -webkit-transform: rotate(35deg);
+    transform: rotate(35deg);
+    -webkit-transition: all 0.55s cubic-bezier(0.19, 1, 0.22, 1);
+    transition: all 0.55s cubic-bezier(0.19, 1, 0.22, 1);
+    width: 2rem;
+  }
+  &:hover:after {
+    // transform: scale(1.05);
+    // background-color: #66aaff;
+    // box-shadow: 10rem 0 0 0  inset;
+    left: 120%;
+  }
+  &:active {
+    transform: scale(0.95);
+  }
   .login__link {
     color: white;
     font-size: $fontMs;
