--- a/front/src/SCSS/Chat.scss
+++ b/front/src/SCSS/Chat.scss
@@ -1,5 +1,14 @@
 @import "./Base.scss";
 
+@keyframes bounce {
+  from {
+    transform: translateY(0rem);
+  }
+  to {
+    transform: translateY(-0.5rem);
+  }
+}
+
 .chat {
   position: -webkit-sticky;
   position: fixed;
@@ -8,6 +17,10 @@
   color: $black;
   bottom: 0.5rem;
   right: 1rem;
+
+  &:hover {
+    animation: bounce 0.5s infinite alternate;
+  }
 
   visibility: visible;
   .chat__icon {
@@ -50,7 +63,7 @@
   width: 22rem;
   height: 40rem;
   border-radius: $round;
-  box-shadow: 0px 0px 2rem 1rem rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 0px 2rem 1rem rgba(0, 0, 0, 0.1);
   padding: 1rem;
 
   display: flex;
