--- a/front/src/SCSS/Chat.scss
+++ b/front/src/SCSS/Chat.scss
@@ -65,6 +65,7 @@
   border-radius: $round;
   box-shadow: 0px 0px 2rem 1rem rgba(0, 0, 0, 0.1);
   padding: 1rem;
+  z-index: 3;
 
   display: flex;
   flex-direction: column;
