--- a/front/src/SCSS/Base.scss
+++ b/front/src/SCSS/Base.scss
@@ -4,6 +4,7 @@ $bodyColor: #f9f9f9;
 $mainColor: #a7bc5b;
 $black: #2c2c34;
 $darkGrey: #565656;
+$grey: #8e8e93;
 $lightestGrey: #e5e5e5;
 $lightGrey: #c4c4c4;
 $pointRed: #ff6864;
