feat: #96 add connected cadets

--- a/front/src/SCSS/Base.scss
+++ b/front/src/SCSS/Base.scss
@@ -8,7 +8,9 @@ $grey: #8e8e93;
 $lightestGrey: #e5e5e5;
 $lightGrey: #c4c4c4;
 $pointRed: #ff6864;
+$pointBlue: #5bbcb6;
 //font-weight
+
 $bold: 800;
 $normal: 600;
 //페이지 전체 margin 기준
