--- a/front/src/SCSS/MainPage/CadetCards.scss
+++ b/front/src/SCSS/MainPage/CadetCards.scss
@@ -34,7 +34,7 @@
   }
   .cadet__word {
     border: 1px solid $lightestGrey;
-    box-shadow: $shadow;
+    // box-shadow: $shadow;
     border-radius: $round;
     padding: 1rem;
     text-align: center;
