--- a/front/src/SCSS/MainPage/Dashboard.scss
+++ b/front/src/SCSS/MainPage/Dashboard.scss
@@ -37,6 +37,13 @@
       font-size: $fontXXl;
       margin-right: 1rem;
     }
+    .IntraImage {
+      border-radius: 50%;
+      width: 3rem;
+      height: 3rem;
+      object-fit: cover;
+      margin-right: 1rem;
+    }
     .user__name {
       font-size: $fontLg;
       font-weight: 800;
