feat: #132 profile, loungePage data-binding

--- a/front/src/SCSS/ProfilePage/ProfileBody.scss
+++ b/front/src/SCSS/ProfilePage/ProfileBody.scss
@@ -71,6 +71,11 @@
   .github-span {
     color: $mainColor;
   }
+  .card2__location,
+  .card2__email,
+  .card2__github {
+    margin: 0.3rem 0;
+  }
 }
 
 .profileBody__col2 {
