--- a/front/src/SCSS/ProfilePage/ProfileHeader.scss
+++ b/front/src/SCSS/ProfilePage/ProfileHeader.scss
@@ -41,7 +41,7 @@
   .profile__bubble {
     background-color: white;
     padding: 1rem 2rem;
-    width: 70%;
+    width: 17rem;
     text-align: center;
     margin: 1.2rem 0 0.7rem 0;
     border-radius: 1.8rem;
@@ -102,9 +102,12 @@
   .row2__following {
     font-weight: 700;
     margin-right: 1rem;
+    cursor: pointer;
   }
 }
 
-// .right__introduction {
-//   margin-left: 1rem;
-// }
+.right__introduction {
+  width: 90%;
+  min-height: 10rem;
+  max-height: 30rem;
+}
