--- a/front/src/SCSS/ProfilePage/ProfileBody.scss
+++ b/front/src/SCSS/ProfilePage/ProfileBody.scss
@@ -52,6 +52,12 @@
       margin: 0 0.2rem;
     }
   }
+  input.column2__skill {
+    border: 2px solid $mainColor;
+    border-radius: 0.7rem;
+    padding: 0.1rem 0.5rem;
+  }
+
   .column2__job,
   .column2__level,
   .column2__skill {
@@ -71,10 +77,11 @@
   .github-span {
     color: $mainColor;
   }
-  .card2__location,
-  .card2__email,
-  .card2__github {
-    margin: 0.3rem 0;
+  input.github-span {
+    margin-left: 1rem;
+    padding: 0.1rem 0.5rem;
+    width: 10rem;
+    color: $darkGrey;
   }
 }
 
@@ -118,4 +125,16 @@
 
 .interested__cards {
   display: flex;
+}
+
+select {
+  border: 2px solid $mainColor;
+  border-radius: 0.7rem;
+  padding: 0.2rem 0.7rem;
+}
+
+select.column2__job,
+select.column2__level,
+input.column2__skill {
+  margin: 0.15rem 0 !important;
 }
