--- a/front/src/SCSS/Base.scss
+++ b/front/src/SCSS/Base.scss
@@ -10,8 +10,8 @@ $lightGrey: #c4c4c4;
 $pointRed: #ff6864;
 $pointBlue: #5bbcb6;
 //font-weight
-
 $bold: 800;
+$semiBold: 700;
 $normal: 600;
 //페이지 전체 margin 기준
 $fontXXl: 3rem; //36px
@@ -24,7 +24,7 @@ $fontSm: 1rem; //12px
 $shadowDeep: 0rem 0.3rem 0.3rem 0rem rgba(0, 0, 0, 0.25);
 $shadow: 0rem 0.3rem 0.3rem 0rem rgba(0, 0, 0, 0.1);
 
-$round: 1rem; //border-radius 통일
+$round: 0.7rem; //border-radius 통일
 
 //페이지 상단 연두색 box 사이즈 (프로필 배너 등)
 
