--- a/front/src/SCSS/init.scss
+++ b/front/src/SCSS/init.scss
@@ -45,28 +45,28 @@ a {
 }
 
 input,
-select {
+select,
+textarea {
   color: $darkGrey;
   border: 2px solid $mainColor;
-  border-radius: 0.7rem;
   padding: 0.2rem 0.7rem;
   &:focus {
     outline: none;
   }
 
   /* safari 등 브라우저 기본 CSS 방지 */
-  //   -webkit-appearance: none;
-  //   -moz-appearance: none;
-  //   appearance: none;
-  //   -webkit-border-radius: 0.7rem; /* Safari 3-4, iOS 1-3.2, Android 1.6- */
-  //   -moz-border-radius: 0.7rem; /* Firefox 1-3.6 */
-  //   border-radius: 0.7rem; /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
+  // -webkit-appearance: none;
+  // -moz-appearance: none;
+  // appearance: none;
+  // -webkit-border-radius: 0.7rem; /* Safari 3-4, iOS 1-3.2, Android 1.6- */
+  // -moz-border-radius: 0.7rem; /* Firefox 1-3.6 */
+  // border-radius: 0.7rem; /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
 }
 
-select {
-  background: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20xmlns%3Axlink%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%22%20width%3D%2215%22%20height%3D%2215%22%20preserveAspectRatio%3D%22xMidYMid%20meet%22%20viewBox%3D%220%200%2020%2020%22%3E%3Cpath%20d%3D%22M5%206l5%205l5-5l2%201l-7%207l-7-7z%22%20fill%3D%22%23a7bc5b%22%2F%3E%3C%2Fsvg%3E")
-    no-repeat 95% 50%;
-}
+// select {
+//   background: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20xmlns%3Axlink%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%22%20width%3D%2215%22%20height%3D%2215%22%20preserveAspectRatio%3D%22xMidYMid%20meet%22%20viewBox%3D%220%200%2020%2020%22%3E%3Cpath%20d%3D%22M5%206l5%205l5-5l2%201l-7%207l-7-7z%22%20fill%3D%22%23a7bc5b%22%2F%3E%3C%2Fsvg%3E")
+//     no-repeat 95% 50%;
+// }
 
 /* 드래그 방지 */
 // html {
