feat : split project page into 3 pages (recruit, proceed, complete)
- 프로젝트 페이지를 모집중, 진행중, 완료 페이지로 나누었음.
- route도 기존 /allproject에서 /project/recruit, /project/proceed,
  project/complete 으로 분할함.
- 메인페이지에서 mainbody, navbar, dashboard에서 /allproject 경로로
  되어있던 부분을 수정했음.

--- a/front/src/SCSS/AllProjectPage/ProjectTypeBar.scss
+++ b/front/src/SCSS/AllProjectPage/ProjectTypeBar.scss
@@ -22,7 +22,24 @@
   // padding-right: 1rem;
 }
 
+.a-color {
+  color: $black;
+}
+
+.b-color {
+  color: $mainColor;
+}
+
 .recruit-project {
+  font-weight: $bold;
+  font-size: $fontMd;
+  color: $black;
+  margin-left: 2rem;
+  .innerHtml:hover {
+    color: $mainColor;
+  }
+}
+.proceed-project {
   font-weight: $bold;
   font-size: $fontMd;
   color: $black;
