feat: #134 delete level, add letter-counter etc

--- a/front/src/SCSS/Base.scss
+++ b/front/src/SCSS/Base.scss
@@ -20,7 +20,8 @@ $fontLg: 2rem; //24px
 $fontMl: 1.8rem;
 $fontMd: 1.5rem; //18px
 $fontMs: 1.3rem;
-$fontSm: 1rem; //12px
+$fontSm: 1rem;
+$fontSs: 0.85rem; //14px ?
 $shadowDeep: 0rem 0.3rem 0.3rem 0rem rgba(0, 0, 0, 0.25);
 $shadow: 0rem 0.3rem 0.3rem 0rem rgba(0, 0, 0, 0.1);
 
