--- a/front/src/SCSS/init.scss
+++ b/front/src/SCSS/init.scss
@@ -50,6 +50,7 @@ textarea {
   color: $darkGrey;
   border: 2px solid $mainColor;
   padding: 0.2rem 0.7rem;
+  border-radius: 0.7rem;
   &:focus {
     outline: none;
   }
@@ -63,10 +64,9 @@ textarea {
   // border-radius: 0.7rem; /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
 }
 
-// select {
-//   background: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20xmlns%3Axlink%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%22%20width%3D%2215%22%20height%3D%2215%22%20preserveAspectRatio%3D%22xMidYMid%20meet%22%20viewBox%3D%220%200%2020%2020%22%3E%3Cpath%20d%3D%22M5%206l5%205l5-5l2%201l-7%207l-7-7z%22%20fill%3D%22%23a7bc5b%22%2F%3E%3C%2Fsvg%3E")
-//     no-repeat 95% 50%;
-// }
+::placeholder {
+  color: $lightGrey;
+}
 
 /* 드래그 방지 */
 // html {
