feat: #134 add skills.json

--- a/front/src/SCSS/ProfilePage/ProfileBody.scss
+++ b/front/src/SCSS/ProfilePage/ProfileBody.scss
@@ -1,6 +1,7 @@
 @import "../Base.scss";
 
 .profileBody {
+  margin-top: 1rem;
   display: flex;
   align-items: flex-start;
   justify-content: center;
