--- a/front/src/SCSS/MainPage/Dashboard.scss
+++ b/front/src/SCSS/MainPage/Dashboard.scss
@@ -82,9 +82,9 @@
       font-size: 1.3rem;
       font-weight: 800;
       margin-right: 1.5rem;
+      min-width: max-content;
 
-      .column1__job,
-      .column1__level {
+      .column1__job {
         margin-bottom: 2rem;
       }
     }
@@ -93,17 +93,18 @@
       color: $lightestGrey;
       font-size: 1.3rem;
       font-weight: 800;
-      .column2__job,
-      .column2__level {
+      .column2__job {
         margin-bottom: 2rem;
       }
       .column2__skill {
         display: flex;
+        max-width: 15rem;
         flex-wrap: wrap;
         img {
           display: inline-block;
           font-size: 5px;
-          margin-right: 0.6rem;
+          margin: 0.5rem 0.4rem;
+          margin-top: 0rem;
         }
       }
     }
