feat: #215 Add Chatting

--- a/front/src/SCSS/ChatRoom.scss
+++ b/front/src/SCSS/ChatRoom.scss
@@ -31,6 +31,9 @@
       }
       .chatRoom__name {
         font-weight: 700;
+        span {
+          margin-right: 0.5rem;
+        }
       }
     }
 
