--- a/front/src/SCSS/MainPage/List.scss
+++ b/front/src/SCSS/MainPage/List.scss
@@ -1,5 +1,11 @@
 @import "../Base.scss";
 
+.noProject {
+  display: flex;
+  justify-content: center;
+  padding: 8rem;
+  font-weight: $bold;
+}
 .cardlist {
   display: flex;
   position: relative;
